fix spacing on several sections

--- a/assets/styl/screen.styl
+++ b/assets/styl/screen.styl
@@ -3,19 +3,19 @@
 @import 'mixins/index'
 @import sections
 
-@media (min-width: 1200px)
-  @import 'media/1200'
+@media (max-width: 480px)
+  @import 'media/480'
+
+@media (max-width: 767px)
+  @import 'media/767'
+
+@media (min-width: 768px)
+  @import 'media/768'
 
 @media (min-width: 980px)
   @import 'media/980'
- 
-@media (min-width: 768px) and (max-width: 979px)
-  @import 'media/979'
- 
-@media (max-width: 767px)
-  @import 'media/767'
- 
-@media (max-width: 480px)
-  @import 'media/480'
+
+@media (min-width: 1200px)
+  @import 'media/1200'
 
 @import _rtl
